--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^2.9.7",
+    "@react-oauth/google": "^0.2.6",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -15,6 +16,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "lodash.debounce": "^4.0.8",
     "rc-progress": "^3.4.0",
     "react": "^18.2.0",
